<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <io.legado.app.ui.widget.image.CoverImageView
        android:id="@+id/cover_preview_short"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cover_preview_short" />

    <io.legado.app.ui.widget.image.CoverImageView
        android:id="@+id/cover_preview_long"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/cover_preview_long" />
</LinearLayout>
