<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_default"
        android:title="@string/default_font"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_other"
        android:title="@string/other_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import"
        android:icon="@drawable/ic_import"
        android:title="@string/import_str"
        app:showAsAction="ifRoom" />

</menu>
