...
    <string name="nb_file_add_shelves">Add to Bookshelf(%1$d)</string>
    <string name="nb_file_add_succeed">%1$d books added successfully</string>
    <string name="fonts_folder">Please put the font files in the Fonts folder of the storage root directory and reselect</string>
    <string name="default_font">Default font</string>
    <string name="select_font">Select fonts</string>
    <string name="font_item_external">%1$s · External folder</string>
    <string name="font_item_private">%1$s · App folder</string>
    <string name="text_size">Text size</string>
    <string name="line_size">Line spacing</string>
    <string name="paragraph_size">Paragraph spacing</string>
    <string name="to_top">To Top</string>
    <string name="selection_to_top">Selection To Top</string>
    <string name="to_bottom">To Bottom</string>
...
